--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -31,6 +29,7 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+      - "15692:15692"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
@@ -42,13 +41,11 @@ services:
       retries: 5
 
   user-api:
-    build:
-      context: ../Booking-app/Booking-app/backend
-      dockerfile: booking/UserApiService/Dockerfile
+    image: spartakj/booking-user-api:latest
     container_name: booking_user_api
     restart: always
     environment:
-      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_ENVIRONMENT: Production
       ASPNETCORE_URLS: http://+:8080
       ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_users;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
       RabbitMQ__Host: rabbitmq
@@ -64,13 +61,11 @@ services:
       - booking_network
 
   offer-api:
-    build:
-      context: ../Booking-app/Booking-app/backend
-      dockerfile: booking/OfferApiService/Dockerfile
+    image: spartakj/booking-offer-api:latest
     container_name: booking_offer_api
     restart: always
     environment:
-      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_ENVIRONMENT: Production
       ASPNETCORE_URLS: http://+:8080
       ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_offers;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
       RabbitMQ__Host: rabbitmq
@@ -88,13 +83,11 @@ services:
       - booking_network
 
   order-api:
-    build:
-      context: ../Booking-app/Booking-app/backend
-      dockerfile: booking/OrderApiService/Dockerfile
+    image: spartakj/booking-order-api:latest
     container_name: booking_order_api
     restart: always
     environment:
-      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_ENVIRONMENT: Production
       ASPNETCORE_URLS: http://+:8080
       ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_orders;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
       RabbitMQ__Host: rabbitmq
@@ -109,6 +102,168 @@ services:
     networks:
       - booking_network
 
+  location-api:
+    image: spartakj/booking-location-api:latest
+    container_name: booking_location_api
+    restart: always
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ASPNETCORE_URLS: http://+:8080
+      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_locations;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
+      RabbitMQ__Host: rabbitmq
+      RabbitMQ__Port: 5672
+      RabbitMQ__Username: guest
+      RabbitMQ__Password: guest
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - booking_network
+
+  attraction-api:
+    image: spartakj/booking-attraction-api:latest
+    container_name: booking_attraction_api
+    restart: always
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ASPNETCORE_URLS: http://+:8080
+      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_attractions;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
+      RabbitMQ__Host: rabbitmq
+      RabbitMQ__Port: 5672
+      RabbitMQ__Username: guest
+      RabbitMQ__Password: guest
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - booking_network
+
+  rentobject-api:
+    image: spartakj/booking-rentobject-api:latest
+    container_name: booking_rentobject_api
+    restart: always
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ASPNETCORE_URLS: http://+:8080
+      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_rentobjects;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
+      RabbitMQ__Host: rabbitmq
+      RabbitMQ__Port: 5672
+      RabbitMQ__Username: guest
+      RabbitMQ__Password: guest
+    volumes:
+      - rentobject_images:/app/wwwroot/images
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - booking_network
+
+  review-api:
+    image: spartakj/booking-review-api:latest
+    container_name: booking_review_api
+    restart: always
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ASPNETCORE_URLS: http://+:8080
+      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_reviews;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
+      RabbitMQ__Host: rabbitmq
+      RabbitMQ__Port: 5672
+      RabbitMQ__Username: guest
+      RabbitMQ__Password: guest
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - booking_network
+
+  statistic-api:
+    image: spartakj/booking-statistic-api:latest
+    container_name: booking_statistic_api
+    restart: always
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ASPNETCORE_URLS: http://+:8080
+      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_statistics;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
+      RabbitMQ__Host: rabbitmq
+      RabbitMQ__Port: 5672
+      RabbitMQ__Username: guest
+      RabbitMQ__Password: guest
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - booking_network
+
+  translation-api:
+    image: spartakj/booking-translation-api:latest
+    container_name: booking_translation_api
+    restart: always
+    environment:
+      ASPNETCORE_ENVIRONMENT: Production
+      ASPNETCORE_URLS: http://+:8080
+      ConnectionStrings__DefaultConnection: "Host=postgres;Port=5432;Database=booking_translations;Username=${DB_USER:-booking_admin};Password=${DB_PASSWORD:-Spartak999!!!!}"
+      RabbitMQ__Host: rabbitmq
+      RabbitMQ__Port: 5672
+      RabbitMQ__Username: guest
+      RabbitMQ__Password: guest
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+    networks:
+      - booking_network
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: booking_node_exporter
+    restart: always
+    command:
+      - '--path.rootfs=/host'
+    volumes:
+      - /:/host:ro,rslave
+    ports:
+      - "9100:9100"
+    networks:
+      - booking_network
+  
+  postgres-exporter:
+    image: prometheuscommunity/postgres-exporter:latest
+    container_name: booking_postgres_exporter
+    restart: always
+    environment:
+      DATA_SOURCE_NAME: "postgresql://${DB_USER:-booking_admin}:${DB_PASSWORD:-Spartak999!!!!}@postgres:5432/booking_users?sslmode=disable"
+    ports:
+      - "9187:9187"
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - booking_network
+
+  nginx-exporter:
+    image: nginx/nginx-prometheus-exporter:latest
+    container_name: booking_nginx_exporter
+    restart: always
+    command:
+      - '-nginx.scrape-uri=http://nginx:8080/stub_status'
+    ports:
+      - "9113:9113"
+    depends_on:
+      - nginx
+    networks:
+      - booking_network
+
   nginx:
     image: nginx:alpine
     container_name: booking_nginx
@@ -116,6 +271,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+      - "8080:8080"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
@@ -133,6 +289,7 @@ networks:
     name: booking_network
     driver: bridge
 
+
 volumes:
   postgres_data:
     name: booking_postgres_data
@@ -142,3 +299,6 @@ volumes:
     name: booking_offer_images
   nginx_logs:
     name: booking_nginx_logs
+  rentobject_images:
+    name: booking_rentobject_images
+
