security: add Cross-Origin-Resource-Policy header to nginx

--- a/nginx/conf.d/api-gateway.conf
+++ b/nginx/conf.d/api-gateway.conf
@@ -1,4 +1,4 @@
-# Upstream definitions
+# Upstream definitions - Backend APIs
 upstream user_api {
     server user-api:8080;
     keepalive 32;
@@ -14,63 +14,154 @@ upstream order_api {
     keepalive 32;
 }
 
-# Main server block
+upstream location_api {
+    server location-api:8080;
+    keepalive 32;
+}
+
+upstream attraction_api {
+    server attraction-api:8080;
+    keepalive 32;
+}
+
+upstream rentobject_api {
+    server rentobject-api:8080;
+    keepalive 32;
+}
+
+upstream review_api {
+    server review-api:8080;
+    keepalive 32;
+}
+
+upstream statistic_api {
+    server statistic-api:8080;
+    keepalive 32;
+}
+
+upstream translation_api {
+    server translation-api:8080;
+    keepalive 32;
+}
+
+upstream frontend {
+    server booking_frontend:80;
+    keepalive 32;
+}
+
 server {
     listen 80;
     server_name booking-oselya.pp.ua www.booking-oselya.pp.ua localhost;
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
+    # Security Headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://static.cloudflareinsights.com https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://unpkg.com; img-src 'self' data: https: blob:; font-src 'self' data: https://cdn.jsdelivr.net; connect-src 'self' https://booking-oselya.pp.ua https://cloudflareinsights.com; frame-src 'none';" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
     add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Cross-Origin-Resource-Policy "same-origin" always;
 
-    # Health check endpoint
+
+    # Block common attack patterns
+    location ~* \.(env|yml|yaml|config|bak|backup|old|swp|dist|json)$ {
+        deny all;
+        return 404;
+    }
+    
+    location ~* (web\.config|wp-config|appsettings|deployment-config|docker-compose) {
+        deny all;
+        return 404;
+    }
+    
     location /health {
         access_log off;
         return 200 "healthy\n";
-        add_header Content-Type text/plain;
     }
 
-    # Root endpoint
-    location / {
-        return 200 '{"status":"ok","message":"Booking Oselya API Gateway","version":"1.0"}';
-        add_header Content-Type application/json;
-    }
-
-    # User API routes
-    location /api/auth {
+    # API routes
+    
+    # User API
+    location /api/User {
         proxy_pass http://user_api;
         include /etc/nginx/conf.d/proxy_params.conf;
     }
 
-    location /api/users {
-        proxy_pass http://user_api;
-        include /etc/nginx/conf.d/proxy_params.conf;
-    }
-
-    # Offer API routes
-    location /api/offers {
+    # Offer API
+    location /api/Offer {
         proxy_pass http://offer_api;
         include /etc/nginx/conf.d/proxy_params.conf;
     }
 
-    location /api/rentobj {
+    location /api/RentObj {
+        proxy_pass http://rentobject_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    location /api/BookedDate {
         proxy_pass http://offer_api;
         include /etc/nginx/conf.d/proxy_params.conf;
     }
 
-    location /api/bookeddate {
-        proxy_pass http://offer_api;
-        include /etc/nginx/conf.d/proxy_params.conf;
-    }
-
-    # Order API routes
-    location /api/orders {
+    # Order API
+    location /api/Order {
         proxy_pass http://order_api;
         include /etc/nginx/conf.d/proxy_params.conf;
     }
 
-    # Static files (images)
+    # Location API
+    location /api/City {
+        proxy_pass http://location_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    location /api/Country {
+        proxy_pass http://location_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    location /api/District {
+        proxy_pass http://location_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    location /api/Region {
+        proxy_pass http://location_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    # Attraction API
+    location /api/Attraction {
+        proxy_pass http://attraction_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    # Review API
+    location /api/Review {
+        proxy_pass http://review_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    # Statistic API
+    location /api/Statistic {
+        proxy_pass http://statistic_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    # Translation API
+    location /api/Translation {
+        proxy_pass http://translation_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    # Fallback для неизвестных API маршрутов
+    location /api/ {
+        return 404 '{"error":"API endpoint not found","message":"Check API documentation"}';
+        add_header Content-Type application/json;
+    }
+
+    # Static files
     location /images/ {
         alias /usr/share/nginx/html/images/;
         expires 30d;
@@ -78,13 +169,34 @@ server {
         access_log off;
     }
 
-    # RabbitMQ Management (only for development)
+    # RabbitMQ Management
     location /rabbitmq/ {
         proxy_pass http://rabbitmq:15672/;
         include /etc/nginx/conf.d/proxy_params.conf;
     }
 
-    # Deny access to hidden files
+    # Frontend - React App 
+    location / {
+        proxy_pass http://frontend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    # Translation API without /api prefix (for legacy frontend)
+    location /Translation {
+        proxy_pass http://translation_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
+
+    location /Bff {
+        proxy_pass http://user_api;
+        include /etc/nginx/conf.d/proxy_params.conf;
+    }
     location ~ /\. {
         deny all;
         access_log off;
